# PokeTreiner_backend

./: .gitignore  README.md  main.py  pyproject.toml  so mais 4 anos.txt
src/: __init__.py
src/adapters/: CardAdapter.py  __init__.py  authAdapter.py  userAdapter.py
src/classes/: __init__.py  dataBankClass.py  userClass.py
src/controllers/: __init__.py  authControllers.py  userControllers.py
src/database/: __init__.py
src/models/: __init__.py  cardModel.py  userModel.py
src/schemas/: cardSchema.py  userSchema.py
src/services/: __init__.py  authService.py  userService.py
src/test/: main.py
src/tests/: cardTypes.py
